修改了文件

--- a/dataType.html
+++ b/dataType.html
@@ -7,10 +7,15 @@
     <script src=""></script>
 </head>
 <body>
+    <p class="world">22222</p>
     <div id="content"></div>
     <div class="wrap"></div>
+    <div class="wrap1"></div>
     <input type="text" name="addr">
     <script>
+        var wro=document.querySelector(".world");
+        var wro1=wro.ClassName;
+        wro.setAttribute("class","hello");
         var x;
         x=10;//number
         var x1="hello";//string
@@ -22,21 +27,29 @@
         var x6=3;
         var x7=7;
         var f=x6===x7;//(false  true)boolean
-        alert("hello world");
-        confirm("你确定要关闭窗口吗");
-        prompt("请输入您的姓名");
+        // alert("hello world");
+        // confirm("你确定要关闭窗口吗");
+        // prompt("请输入您的姓名");
         var content=document.getElementById("content");
         var wrap=document.getElementsByClassName("wrap");
+        var warp00=document.querySelector(".wrap");
         var wrap1=document.getElementsByTagName("div");
         var ip=document.getElementsByName("adder");
-        var con=document.querySelector(".content");
+        var con=document.querySelector("#content");
         var con1=document.querySelectorAll("div");
         var con2=document.documentElement;
         var con3=document.head;
         var con4=document.body;
         var con5=document.title;
         content.innerText="hello world";
-        wrap.innerText="<p>你好世界</p>";
+        wrap[0].innerText="<p>你好世界</p>";//获取到的是一个数组
+        var wrap1=document.querySelector(".wrap1");
+        wrap1.innerHTML="<span>这是添加一span标签</span>"
+        var name=warp00.ClassName;
+        var name3=warp00.getAttribute("class");
+        warp00.setAttribute("class","hello");
+        warp00.removeAttribute("class");
+        var name1=content.id;
     </script>
 </body>
 </html>
